fixed auth -> users
